# supt-dashboard

./: .bumpversion.cfg  LICENSE  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pages.yml  publish.yml
.github/workflows/.github/workflows/: publish.yml
supt_dashboard/: dashboard.py
supt_dashboard/tests/: test_dashboard.py
