[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supt-dashboard"
version = "0.1.2"
description = "SUPT ψ-Fold Monitoring Dashboard with NOAA + USGS integration"
authors = [
  { name = "SunWolf", email = "contact@sunwolf77.org" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "plotly>=5.20.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
supt-dashboard = "supt_dashboard.dashboard:main"
supt-dashboard-save = "supt_dashboard.dashboard:save_main"

[tool.setuptools.packages.find]
where = ["supt_dashboard"]
